--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sample_login_letscode"
-        android:fullBackupContent="@xml/backup_descriptor">
+        android:theme="@style/Theme.Sample_login_letscode">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.LoggedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:screenOrientation="fullSensor"
             android:windowSoftInputMode="adjustResize">
